--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <h1>video tag practice </h1>
     </head>
     <body>
-        <video height="400px" controls muted autoplay>
+        <video height="400px" controls muted autoplay poster="">
             <source src=https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4 type="video/mp4"/>
         </video>
     </body>
