double correction completed

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>video tag</title>
-        <h1>video tag practice </h1>
+        
     </head>
     <body>
+        <h1>video tag practice asignment</h1>
         <video height="400px" controls muted autoplay poster="https://t3.ftcdn.net/jpg/04/70/37/00/360_F_470370030_TxVCOsONUxh659YzwP2wCkX0ijAetDh9.jpg">
             <source src=https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4 type="video/mp4"/>
         </video>
